--- a/izuddin-helmi-adnan/over-the-misty-city-detail-01.html
+++ b/izuddin-helmi-adnan/over-the-misty-city-detail-01.html
@@ -32,7 +32,7 @@
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
     
         <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-        <li class="breadcrumb-item"><a href="izuddin-helmi-adnan/index.html">Izuddin Helmi Adnan</a></li>
+        <li class="breadcrumb-item"><a href="index.html">Izuddin Helmi Adnan</a></li>
           <li class="breadcrumb-item">Over the Misty City</li>
         <!-- InstanceEndEditable -->
 			</ol>
