--- a/raghu-nayyar/limes-detail-page-01.html
+++ b/raghu-nayyar/limes-detail-page-01.html
@@ -36,7 +36,7 @@
           <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
     
         <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-          <li class="breadcrumb-item"><a href="raghu-nayyar/index.html">Raghu Nayyar</a></li>
+          <li class="breadcrumb-item"><a href="index.html">Raghu Nayyar</a></li>
           <li class="breadcrumb-item">Limes</li>
           <!-- InstanceEndEditable -->
 			</ol>
