--- a/david-monje/the-world-is-your-oyster-detail-01.html
+++ b/david-monje/the-world-is-your-oyster-detail-01.html
@@ -31,8 +31,8 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
             <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-            <li class="breadcrumb-item">Inactive Link</li>
-            <li class="breadcrumb-item active">Active Link</li>
+            <li class="breadcrumb-item"><a href="index.html">David Monje</a></li>
+            <li class="breadcrumb-item active">The World is Your Oyster</li>
             <!-- InstanceEndEditable -->
           </ol>
         </nav>
@@ -59,7 +59,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="david monje-content" -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> Photo Info </button>
+          <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-image"></i> Photo Info </button>
           
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
