--- a/izuddin-helmi-adnan/cargo-boat-detail-01.html
+++ b/izuddin-helmi-adnan/cargo-boat-detail-01.html
@@ -32,7 +32,7 @@
             <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
             <!-- InstanceBeginEditable name="breadcrumb-trail" -->
        <li class="breadcrumb-item"><a href="index.html">Izuddin Helmi Adnan</a></li>
-          <li class="breadcrumb-item">Cargo Boat</li>
+          <li class="breadcrumb-item active">Cargo Boat</li>
         <!-- InstanceEndEditable -->
           </ol>
         </nav>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="raghu-nayyar-content" -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> Photo Info </button>
+          <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-image"></i> Photo Info </button>
           
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
