--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -31,8 +31,8 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
             <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-            <li class="breadcrumb-item">Inactive Link</li>
-            <li class="breadcrumb-item active">Active Link</li>
+            
+            <li class="breadcrumb-item active">Raghu Nayyar</li>
             <!-- InstanceEndEditable -->
           </ol>
         </nav>
