added last CSS modal

--- a/M.H. Rezza/these-little-hands-detail-01.html
+++ b/M.H. Rezza/these-little-hands-detail-01.html
@@ -31,7 +31,7 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
             <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-       <li class="breadcrumb-item"><a href="M.H.%20Rezza/index.html">M.H. Rezza</a></li>
+       <li class="breadcrumb-item"><a href="index.html">M.H. Rezza</a></li>
           <li class="breadcrumb-item active">These Little Hands</li>
         <!-- InstanceEndEditable -->
           </ol>
@@ -126,8 +126,8 @@
                   </div>
                 </div>
                 <div class="modal-footer">
-                  <a href="https://unsplash.com/photos/h38yV5dlyqE" target="_blank">Photo Source</a>
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <a href="https://unsplash.com/photos/h38yV5dlyqE" target="_blank" class="btn btn-primary btn-sm"><i class="fas fa-image"></i> Photo Source</a>
+                  <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
                 </div>
               </div>
             </div>
