--- a/david-monje/index.html
+++ b/david-monje/index.html
@@ -65,7 +65,7 @@
               <a href="somber-scarf-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539537281944-ab31a4d66d96?auto=format&w=400&q=60" alt="somber scarf"></a>
             </div>
             <div class="card">
-              <a href="yeehaw-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535042210554-cb824353c54a?auto=format&w=400&q=60" alt="sun peaking through"></a>
+              <a href="sun-peaking-through-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535042210554-cb824353c54a?auto=format&w=400&q=60" alt="sun peaking through"></a>
             </div>
             <div class="card">
               <a href="en-route-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1526757969795-c5457718176f?auto=format&w=400&q=60" alt="en route"></a>
